--- a/TRABAJO/index.html
+++ b/TRABAJO/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
     <!--select del bootstrap-->
 
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/inicio.css">
 
 </head>
 
@@ -39,19 +39,19 @@
             <div class="collapse navbar-collapse" id="navbarS">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Inicio</a>
+                        <a href="#" class="nav-link active" aria-current="page">Inicio</a>
                     </li>
 
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Calculadora</a>
+                        <a href="calculadora.html" class="nav-link">Calculadora</a>
+                    </li>
+
+                   <li class="nav-item">
+                        <a href="sobreNosotros.html" class="nav-link">Sobre Nosotros</a>
                     </li>
 
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Sobre Nosotros</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Gestiona tu propiedad</a>
+                        <a href="gestionaPropiedad.html" class="nav-link">Gestiona tu propiedad</a>
                     </li>
                 </ul>
             </div>
@@ -72,20 +72,17 @@
         </div>
 
         <div class="carousel-inner">
-
             <div class="carousel-item active">
                 <img src="img/FotosMalaga/malagaInicio.jpg" class="d-block w-100" alt="Imagen de la bahía de Málaga">
                 <div class="carousel-caption">
                     <h5>Bahía de Málaga</h5>
-                    <a href="#" class="btn btn-primary mt-3">Más info</a>
                 </div>
             </div>
 
             <div class="carousel-item">
                 <img src="img/FotosMalaga/catedral.jpg" class="d-block w-100" alt="Imagen de la farola de Málaga">
                 <div class="carousel-caption">
-                    <h5>Farola de Málaga</h5>
-                    <a href="#" class="btn btn-primary mt-3">Más info</a>
+                    <h5>Catedral de Málaga</h5>
                 </div>
             </div>
 
@@ -93,8 +90,7 @@
                 <img src="img/FotosMalaga/callelarios.jpg" class="d-block w-100"
                     alt="Imagen de la playa de la Malagueta de Málaga">
                 <div class="carousel-caption">
-                    <h5>Malagueta</h5>
-                    <a href="#" class="btn btn-primary mt-3">Más info</a>
+                    <h5>Calle Larios</h5>
                 </div>
             </div>
         </div>
@@ -111,7 +107,8 @@
         </button>
     </div>
 
-
+<!---------------------------------------------------------------------------------->
+<!------------------------------------BUSCAR---------------------------------------------->
 
     <div class="search_select_box">
         <select data-live-search="true">
@@ -124,104 +121,9 @@
         </select>
     </div>
 
+<!---------------------------------------------------------------------------------->
+<!-----------------------------------CASASSSSS----------------------------------------------->
 
-
-
-
-
-    <section class="about section-padding">
-        <div class="container">
-            <div class="row">
-                <!--para que sea responsive en modo telefono-->
-                <div class="col-lg-4 col-md-12 col-12">
-                    <div class="about-img">
-                        <img src="img/favicon.jpg" class="img-fluid" alt="">
-                    </div>
-                </div>
-                <div class="col-lg-8 col-md-12 col-12 ps-lg-5 mt-md-5">
-                    <div class="about-text text-white">
-                        <h2>Hoteles y playa <br>Servicios</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, aperiam quaerat natus odio
-                            culpa a adipisci possimus dolores dicta, distinctio nostrum. Possimus aut porro dolorem qui
-                            necessitatibus aspernatur veritatis quae.</p>
-                        <a href="#" class="btn btn-primary">Mas Informacion</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="services section-padding">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="section-header text-center text-white pb-5">
-                        <h2>Nuestros servicios</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias reiciendis et mollitia
-                            aliquam incidunt, minima est at sit, <br> ex obcaecati nobis dolorem assumenda fugit
-                            laboriosam,
-                            quos ducimus aliquid totam cumque.</p>
-
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 col-md-12 col-lg-4">
-                    <div class="card text-white text-center bg-dark pb-2">
-                        <div class="card-body">
-                            <i class="bi bi-laptop"></i>
-                            <h3 class="card-title">Registro</h3>
-                            <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi minus nisi
-                                quod
-                                repudiandae animi obcaecati nemo est neque eaque, architecto consequuntur
-                                recusandae, pariatur necessitatibus accusamus quibusdam. Placeat eum accusamus
-                                maxime.</p>
-                            <button class="btn bg-primary text-white">Mas Informacion</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-12 col-lg-4">
-                    <div class="card text-white text-center bg-dark pb-2">
-                        <div class="card-body">
-                            <i class="bi bi-wifi"></i>
-                            <h3 class="card-title">Internet</h3>
-                            <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi minus nisi
-                                quod
-                                repudiandae animi obcaecati nemo est neque eaque, architecto consequuntur
-                                recusandae, pariatur necessitatibus accusamus quibusdam. Placeat eum accusamus
-                                maxime.</p>
-                            <button class="btn bg-primary text-white">Mas Informacion</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-12 col-lg-4">
-                    <div class="card text-white text-center bg-dark pb-2">
-                        <div class="card-body">
-                            <i class="bi bi-tv"></i>
-                            <h3 class="card-title">TV</h3>
-                            <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi minus nisi
-                                quod
-                                repudiandae animi obcaecati nemo est neque eaque, architecto consequuntur
-                                recusandae, pariatur necessitatibus accusamus quibusdam. Placeat eum accusamus
-                                maxime.</p>
-                            <button class="btn bg-primary text-white">Mas Informacion</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-
-
-
-
-
-
-
-
-    <!--ESTO SIIIIIIIIIIIII es para mostrar las casas-->
     <section class="portfolio section-padding">
         <div class="container">
             <div class="row">
@@ -326,6 +228,8 @@
         </div>
     </section>
 
+<!---------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------->
 
     <section class="team section-padding">
         <div class="container">
@@ -403,11 +307,44 @@
         </div>
     </section>
 
-    <footer class="bg-dark p-2 text-center">
-        <div class="container">
-            <p class="text-white">Playas de Málaga</p>
+<!---------------------------------------------------------------------------------->
+<!--------------------------------FOOTER-------------------------------------------------->
+
+<footer class="pie-pagina pie-pagina-dark bg-dark mt-5">
+    <div class="grupo-1">
+        <div class="box">
+            <figure>
+                <a href="#">
+                    <img src="img/logo_footer.png" alt="logo en el que se ve una casa ">
+                </a>
+            </figure>
         </div>
-    </footer>
+        <div class="box">
+            <p class="mt-4 mb-5"><i class="bi bi-geo-fill"></i>Calle Blvr. Louis Pasteur,35 <br> <i
+                    class="bi bi-phone-fill"></i> 952 13 28 42 <br><i
+                    class="bi bi-envelope-fill"></i> malagadreamhome@gmail.es</p>
+        </div>
+
+        <div class="box">
+            <h2>SIGUENOS</h2>
+            <div class="redes-social">
+                <a href="https://www.twitter.com" target="_blank" class="bi bi-twitter"></a>
+                <a href="https://www.facebook.com" target="_blank" class="bi bi-facebook"></a>
+                <a href="https://www.instagram.com" target="_blank" class="bi bi-instagram"></a>
+                <a href="https://www.linkedin.com" target="_blank" class="bi bi-linkedin"></a>
+            </div>
+        </div>
+    </div>
+
+    <div class="grupo-2">
+        <small>
+            &copy;2024 <b>Malaga Dream Home</b> - Todos los derechos reservados -
+        </small>
+    </div>
+</footer>
+
+<!---------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------->
 
 
     <!-- All Js -->
