--- a/TRABAJO/index.html
+++ b/TRABAJO/index.html
@@ -110,16 +110,17 @@
 <!---------------------------------------------------------------------------------->
 <!------------------------------------BUSCAR---------------------------------------------->
 
-    <div class="search_select_box">
-        <select data-live-search="true">
+    <div class="filtro">
+        <input type="text" name="example" list="exampleList">
+        <datalist id="exampleList">
             <option>Web Design</option>
             <option>Web development</option>
             <option>app development</option>
             <option>seo</option>
             <option>Digital Marketing</option>
-
-        </select>
+        </datalist>
     </div>
+    
 
 <!---------------------------------------------------------------------------------->
 <!-----------------------------------CASASSSSS----------------------------------------------->
