--- a/TRABAJO/sobreNosotros.html
+++ b/TRABAJO/sobreNosotros.html
@@ -76,7 +76,7 @@
                 <div class="questions__answer">
                     <h3 class="questions__title">¿Qué es CSS?
                         <span class="questions__arrow">
-                            <i class="questions__i bi bi-arrow-down-circle-fill"></i>
+                            <i class="questions__i bi bi-arrow-up-circle-fill"></i>
                         </span>
                     </h3>
                     <p class="questions__show">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi vel vero
@@ -102,7 +102,7 @@
                 <div class="questions__answer">
                     <h3 class="questions__title">¿Qué es CSS?
                         <span class="questions__arrow">
-                            <i class="questions__i bi bi-arrow-down-circle-fill"></i>
+                            <i class="questions__i bi bi-arrow-up-circle-fill"></i>
                         </span>
                     </h3>
                     <p class="questions__show">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi vel vero
