--- a/TRABAJO/calculadora.html
+++ b/TRABAJO/calculadora.html
@@ -29,7 +29,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 
         <div class="container">
-            <a href="#" class="navbar-brand"> <span class="text-primary">Málaga</span>DreamHome</a>
+            <a href="index.html" class="navbar-brand"> <span class="text-primary">Málaga</span>DreamHome</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarS"
                 aria-controls="navbarS" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,32 +58,6 @@
 
         </div>
     </nav>
-
-    <section class="about section-padding">
-        <div class="container">
-            <div class="row">
-                <!--para que sea responsive en modo telefono-->
-                <div class="col-lg-4 col-md-12 col-12">
-                    <div class="about-img">
-                        <img src="img/favicon.jpg" class="img-fluid" alt="">
-                    </div>
-                </div>
-                <div class="col-lg-8 col-md-12 col-12 ps-lg-5 mt-md-5">
-                    <div class="about-text text-white">
-                        <h2>Hoteles y playa <br>Servicios</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, aperiam quaerat natus odio
-                            culpa a adipisci possimus dolores dicta, distinctio nostrum. Possimus aut porro dolorem qui
-                            necessitatibus aspernatur veritatis quae.</p>
-                        <a href="#" class="btn btn-primary">Mas Informacion</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-    
-
 
     <section class="about section-padding">
         <div class="container">
