--- a/TRABAJO/sobreNosotros.html
+++ b/TRABAJO/sobreNosotros.html
@@ -30,7 +30,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 
         <div class="container">
-            <a href="#" class="navbar-brand"> <span class="text-primary">Málaga</span>DreamHome</a>
+            <a href="index.html" class="navbar-brand"> <span class="text-primary">Málaga</span>DreamHome</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarS"
                 aria-controls="navbarS" aria-expanded="false" aria-label="Toggle navigation">
@@ -74,9 +74,9 @@
         <section class="questions__container">
             <article class="questions__padding">
                 <div class="questions__answer">
-                    <h3 class="questions__title">¿Qué es CSS?
+                    <h3 class="questions__title">¿Cómo contacto?
                         <span class="questions__arrow">
-                            <i class="questions__i bi bi-arrow-up-circle-fill"></i>
+                            <i class="questions__i bi bi-arrow-up-short"></i>
                         </span>
                     </h3>
                     <p class="questions__show">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi vel vero
@@ -87,9 +87,9 @@
 
             <article class="questions__padding">
                 <div class="questions__answer">
-                    <h3 class="questions__title">¿Qué es CSS?
+                    <h3 class="questions__title">¿Cómo calculo mi hipoteca?
                         <span class="questions__arrow">
-                            <i class="questions__i bi bi-arrow-up-circle-fill"></i>
+                            <i class="questions__i bi bi-arrow-up-short"></i>
                         </span>
                     </h3>
                     <p class="questions__show">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi vel vero
@@ -100,9 +100,9 @@
 
             <article class="questions__padding">
                 <div class="questions__answer">
-                    <h3 class="questions__title">¿Qué es CSS?
+                    <h3 class="questions__title">¿Cómo busco casas?
                         <span class="questions__arrow">
-                            <i class="questions__i bi bi-arrow-up-circle-fill"></i>
+                            <i class="questions__i bi bi-arrow-up-short"></i>
                         </span>
                     </h3>
                     <p class="questions__show">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi vel vero
