--- a/TRABAJO/sobreNosotros.html
+++ b/TRABAJO/sobreNosotros.html
@@ -79,13 +79,13 @@
                             <i class="questions__i bi bi-arrow-up-short"></i>
                         </span>
                     </h3>
-                    <p class="questions__show">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi vel vero
+                    <p class="questions__show" id="paparrucha">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi vel vero
                         consequatur, praesentium natus perferendis tenetur ratione doloribus assumenda, inventore harum
                         tempore maxime? Quaerat cupiditate maxime nulla reiciendis perferendis et!</p>
                 </div>
             </article>
 
-            <article class="questions__padding">
+            <article class="questions__padding" id="kk">
                 <div class="questions__answer">
                     <h3 class="questions__title">¿Cómo calculo mi hipoteca?
                         <span class="questions__arrow">
@@ -113,6 +113,9 @@
         </section>
     </section>
 
+
+ 
+   
     <!---------------------------------------------------------------------------------->
     <!-----------------------------------FOOTER----------------------------------------------->
 
@@ -155,6 +158,7 @@
         crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
+    <!--quitar-->
 
 
 </body>
