--- a/TRABAJO/calculadora.html
+++ b/TRABAJO/calculadora.html
@@ -70,10 +70,11 @@
                 </div>
                 <div class="col-lg-8 col-md-12 col-12 ps-lg-5 mt-md-5">
                     <div class="about-text text-white">
-                        <h2>Hoteles y playa <br>Servicios</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, aperiam quaerat natus odio
-                            culpa a adipisci possimus dolores dicta, distinctio nostrum. Possimus aut porro dolorem qui
-                            necessitatibus aspernatur veritatis quae.</p>
+                        <h2>Calculadora de hipoteca</h2>
+                        <p>Con nuestra calculadora de hipoteca podrás realizar una estimación del coste mensual de comprar
+                            una casa con hipoteca. Te permitirá saber si te es rentable y accesible para comenzar con el proceso
+                            de solicitud de hipoteca de tu próxima vivienda.
+                        </p>
                         <a href="#" class="btn btn-primary">Mas Informacion</a>
                     </div>
                 </div>
