--- a/TRABAJO/calculadora.html
+++ b/TRABAJO/calculadora.html
@@ -87,11 +87,10 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="section-header text-center text-white pb-5">
-                        <h2>Nuestros servicios</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias reiciendis et mollitia
-                            aliquam incidunt, minima est at sit, <br> ex obcaecati nobis dolorem assumenda fugit
-                            laboriosam,
-                            quos ducimus aliquid totam cumque.</p>
+                        <h2>Conceptos clave que has de saber</h2>
+                        <p>¿Tienes alguna duda acerca de cómo se calcula tu hipoteca? No te preocupes, aquí te explicamos todo lo que necesitas 
+                            saber antes de hipotecar tu vivienda.
+                        </p>
 
                     </div>
                 </div>
@@ -101,12 +100,11 @@
                     <div class="card text-white text-center bg-dark pb-2">
                         <div class="card-body">
                             <i class="bi bi-laptop"></i>
-                            <h3 class="card-title">Registro</h3>
-                            <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi minus nisi
-                                quod
-                                repudiandae animi obcaecati nemo est neque eaque, architecto consequuntur
-                                recusandae, pariatur necessitatibus accusamus quibusdam. Placeat eum accusamus
-                                maxime.</p>
+                            <h3 class="card-title">Valor hipotecario</h3>
+                            <p class="lead"> Es el precio estimado por una empresa acreditada mediante una tasación. Este precio se fija y será la cantidad
+                                máxima que el banco prestará para la operación, además de el valor que se toma como referencia para calcular el préstamo. Este precio 
+                                puede ser mayor o menor que el valor de venta, ya que el valor hipotecario ha de ser un valor objetivo y sin especulaciones.
+                            </p>
                             <button class="btn bg-primary text-white">Mas Informacion</button>
                         </div>
                     </div>
