--- a/TRABAJO/index.html
+++ b/TRABAJO/index.html
@@ -110,124 +110,63 @@
 <!---------------------------------------------------------------------------------->
 <!------------------------------------BUSCAR---------------------------------------------->
 
-    <div class="filtro">
-        <input type="text" name="example" list="exampleList">
-        <datalist id="exampleList">
-            <option>Web Design</option>
-            <option>Web development</option>
-            <option>app development</option>
-            <option>seo</option>
-            <option>Digital Marketing</option>
-        </datalist>
+<div class="filtro-container">
+    <div class="filtro-content">
+        <!-- Fila 1 -->
+        <label for="filtroCalle">Calle:</label>
+        <input type="text" id="filtroCalle" class="large-input">
+        <label for="filtroOperacion">Operación:</label>
+        <select id="filtroOperacion" class="large-input">
+            <option value="cualquiera">Cualquiera</option>
+            <option value="compra">Compra</option>
+            <option value="alquiler">Alquiler</option>
+            <option value="ambos">Ambos</option>
+        </select>
+        <label for="filtroMunicipio">Municipio:</label>
+        <input type="text" id="filtroMunicipio" class="large-input">
+        <!-- Fila 2 -->
+        <label for="filtroTipo">Tipo:</label>
+        <input type="text" id="filtroTipo" class="large-input">
+        <label for="filtroHabitaciones">Nº Habitaciones:</label>
+        <input type="number" id="filtroHabitaciones" min="0" class="small-input">
+        <label for="filtroBanos">Nº Baños:</label>
+        <input type="number" id="filtroBanos" min="0" class="small-input">
+        <!-- Fila 3 -->
+        <label for="filtroPrecioDesde">Precio:</label>
+        <input type="number" id="filtroPrecioDesde" min="0" class="small-input">
+        -
+        <input type="number" id="filtroPrecioHasta" min="0" class="small-input">
+        <label for="filtroDistrito">Distrito:</label>
+        <input type="text" id="filtroDistrito" class="large-input">
+        <!-- Fila 4 -->
+        <label for="filtroSuperficieDesde">Superficie:</label>
+        <input type="number" id="filtroSuperficieDesde" min="0" class="small-input">
+        -
+        <input type="number" id="filtroSuperficieHasta" min="0" class="small-input">
+        <label for="filtroEstado">Estado:</label>
+        <input type="text" id="filtroEstado" class="large-input">
     </div>
+</div>
+<button onclick="aplicarFiltros()">Aplicar Filtros</button>
+<script src="Piso.js"></script>
+
+
+
     
 
 <!---------------------------------------------------------------------------------->
 <!-----------------------------------CASASSSSS----------------------------------------------->
 
-    <section class="portfolio section-padding">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="section-header text-center text-white pb-5">
-                        <h2>Playa</h2>
-                        <p>orem, ipsum dolor sit amet consectetur <br>adipisicing elit. </p>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 col-md-12 col-lg-4 mt-4">
-                    <div class="card text-light text-center bg-dark pb-2">
-                        <div class="card-body text-white">
-                            <div class="img-area mb-4">
-                                <img src="img/Casas/casa1.jpg" class="img-fluid" alt="">
-                            </div>
-                            <h3>Playa 1</h3>
-                            <p class="lead"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis in maiores
-                                modi eum harum velit officiis esse facere excepturi earum sint, beatae quasi ab et iure
-                                perspiciatis optio ratione placeat?</p>
-                            <button class="btn bg-primary text-white">Mas informacion</button>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-md-12 col-lg-4 mt-4">
-                    <div class="card text-light text-center bg-dark pb-2">
-                        <div class="card-body text-white">
-                            <div class="img-area mb-4">
-                                <img src="img/Casas/casa2.jpg" class="img-fluid" alt="">
-                            </div>
-                            <h3>Playa 2</h3>
-                            <p class="lead"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis in maiores
-                                modi eum harum velit officiis esse facere excepturi earum sint, beatae quasi ab et iure
-                                perspiciatis optio ratione placeat?</p>
-                            <button class="btn bg-primary text-white">Mas informacion</button>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-md-12 col-lg-4 mt-4">
-                    <div class="card text-light text-center bg-dark pb-2">
-                        <div class="card-body text-white">
-                            <div class="img-area mb-4">
-                                <img src="img/Casas/casa3.jpg" class="img-fluid" alt="">
-                            </div>
-                            <h3>Playa 3</h3>
-                            <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis in maiores
-                                modi eum harum velit officiis esse facere excepturi earum sint, beatae quasi ab et iure
-                                perspiciatis optio ratione placeat?</p>
-                            <button class="btn bg-primary text-white">Mas informacion</button>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-md-12 col-lg-4 mt-4">
-                    <div class="card text-light text-center bg-dark pb-2">
-                        <div class="card-body text-white">
-                            <div class="img-area mb-4">
-                                <img src="img/Casas/casa4.jpg" class="img-fluid" alt="">
-                            </div>
-                            <h3>Playa 4</h3>
-                            <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis in maiores
-                                modi eum harum velit officiis esse facere excepturi earum sint, beatae quasi ab et iure
-                                perspiciatis optio ratione placeat?</p>
-                            <button class="btn bg-primary text-white">Mas informacion</button>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-md-12 col-lg-4 mt-4">
-                    <div class="card text-light text-center bg-dark pb-2">
-                        <div class="card-body text-white">
-                            <div class="img-area mb-4">
-                                <img src="img/Casas/casa5.jpg" class="img-fluid" alt="">
-                            </div>
-                            <h3>Playa 5</h3>
-                            <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis in maiores
-                                modi eum harum velit officiis esse facere excepturi earum sint, beatae quasi ab et iure
-                                perspiciatis optio ratione placeat?</p>
-                            <button class="btn bg-primary text-white">Mas informacion</button>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-md-12 col-lg-4 mt-4">
-                    <div class="card text-light text-center bg-dark pb-2">
-                        <div class="card-body text-white">
-                            <div class="img-area mb-4">
-                                <img src="img/Casas/casa6.jpg" class="img-fluid" alt="">
-                            </div>
-                            <h3>Playa 6</h3>
-                            <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis in maiores
-                                modi eum harum velit officiis esse facere excepturi earum sint, beatae quasi ab et iure
-                                perspiciatis optio ratione placeat?</p>
-                            <button class="btn bg-primary text-white">Mas informacion</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
+<section class="portfolio section-padding">
+    <div class="container">
+        <div class="row" id="pisosContainer">
+            <!-- Las tarjetas se insertarán aquí dinámicamente -->
         </div>
-    </section>
+    </div>
+</section>
+
+<script src="Piso.js"></script>
+
 
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
