cambios del sobreNosotros

--- a/TRABAJO/sobreNosotros.html
+++ b/TRABAJO/sobreNosotros.html
@@ -68,8 +68,8 @@
     <section class="questions container">
         <h2 class="subtitle">Preguntas frecuentes</h2>
         <p class="questions_paragraph">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio nulla sunt quis illum enim tenetur
-            dignissimos qui nihil voluptate,
+            A continuación se ofrece un listado de preguntas comunes que suelen hacer nuestros usuarios acerca de las
+            diferentes posibilidades que ofrecidos, para daros un servicio eficiente y sencillo.
         </p>
         <section class="questions__container">
             <article class="questions__padding">
@@ -79,7 +79,8 @@
                             <i class="questions__i bi bi-arrow-up-short"></i>
                         </span>
                     </h3>
-                    <p class="questions__show" id="paparrucha">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi vel vero
+                    <p class="questions__show" id="paparrucha">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Sequi vel vero
                         consequatur, praesentium natus perferendis tenetur ratione doloribus assumenda, inventore harum
                         tempore maxime? Quaerat cupiditate maxime nulla reiciendis perferendis et!</p>
                 </div>
@@ -114,8 +115,89 @@
     </section>
 
 
- 
-   
+
+
+    <!---------------------------------------------------------------------------------->
+    <!-----------------------------------CONTACTO----------------------------------------------->
+
+    <section class="contact section-padding">
+        <div class="container mt-5 mb-5">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="section-header text-center text-white pb-5">
+                        <h2>Contacto</h2>
+                        <p>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum natus possimus quos
+                            quibusdam illum deleniti voluptas atque quia molestias <br>cumque minima eos ullam, aliquid
+                            fugit ducimus voluptates, rerum, in nemo?
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row m-0">
+                <div class="col-md-12 p-0 pt-4 pb-4">
+                    <form action="#" class="bg-dark p-4 m-auto">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="mb-3">
+                                    <input type="text" class="fore-control" placeholder="Nombre" required>
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <div class="mb-3">
+                                    <input type="tel" class="fore-control" placeholder="Telefono" required>
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <div class="mb-3">
+                                    <textarea class="form-control" placeholder="Mensaje" rows="3" required></textarea>
+                                </div>
+                            </div>
+                            <!--mt : margen del top -->
+                            <button class="btn btn-primary btn-lg btn-blovk mt-3" type="submit">Enviar</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!---------------------------------------------------------------------------------->
+    <!---------------------------------------INTEGRANTES DEL GRUPO------------------------------------------->
+
+    <section class="team section-padding">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="section-header text-center text-white pb-5">
+                        <h2>Integrantes del grupo</h2>
+                        <p>orem ipsum, dolor sit amet consectetur adipisicing elit. <br> Omnis in maiores
+                            modi eum harum velit off</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="card text-center bg-dark">
+                        <div class="card-body text-white">
+                            <img src="img/persona.jpg" class="img-fluid rounded-circle" alt="">
+                            <h3 class="card-title py-2">Lorem</h3>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
+                                nullasaepe!</p>
+                            <p class="socials">
+                                <i class="bi bi-twitter text-white mx-1"></i>
+                                <i class="bi bi-facebook text-white mx-1"></i>
+                                <i class="bi bi-linkedin text-white mx-1"></i>
+                                <i class="bi bi-instagram text-white mx-1"></i>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!---------------------------------------------------------------------------------->
     <!-----------------------------------FOOTER----------------------------------------------->
 
