--- a/TRABAJO/index.html
+++ b/TRABAJO/index.html
@@ -113,37 +113,37 @@
 <div class="filtro-container">
     <div class="filtro-content">
         <!-- Fila 1 -->
-        <label for="filtroCalle">Calle:</label>
+        <label for="filtroCalle">Calle:<span class="required">*</span></label>
         <input type="text" id="filtroCalle" class="large-input">
-        <label for="filtroOperacion">Operación:</label>
+        <label for="filtroOperacion">Operación:<span class="required">*</span></label>
         <select id="filtroOperacion" class="large-input">
             <option value="cualquiera">Cualquiera</option>
             <option value="compra">Compra</option>
             <option value="alquiler">Alquiler</option>
             <option value="ambos">Ambos</option>
         </select>
-        <label for="filtroMunicipio">Municipio:</label>
+        <label for="filtroMunicipio">Municipio:<span class="required">*</span></label>
         <input type="text" id="filtroMunicipio" class="large-input">
         <!-- Fila 2 -->
-        <label for="filtroTipo">Tipo:</label>
+        <label for="filtroTipo">Tipo:<span class="required">*</span></label>
         <input type="text" id="filtroTipo" class="large-input">
-        <label for="filtroHabitaciones">Nº Habitaciones:</label>
+        <label for="filtroHabitaciones">Nº Habitaciones:<span class="required">*</span></label>
         <input type="number" id="filtroHabitaciones" min="0" class="small-input">
-        <label for="filtroBanos">Nº Baños:</label>
+        <label for="filtroBanos">Nº Baños:<span class="required">*</span></label>
         <input type="number" id="filtroBanos" min="0" class="small-input">
         <!-- Fila 3 -->
-        <label for="filtroPrecioDesde">Precio:</label>
+        <label for="filtroPrecioDesde">Precio:<span class="required">*</span></label>
         <input type="number" id="filtroPrecioDesde" min="0" class="small-input">
         -
         <input type="number" id="filtroPrecioHasta" min="0" class="small-input">
-        <label for="filtroDistrito">Distrito:</label>
+        <label for="filtroDistrito">Distrito:<span class="required">*</span></label>
         <input type="text" id="filtroDistrito" class="large-input">
         <!-- Fila 4 -->
-        <label for="filtroSuperficieDesde">Superficie:</label>
+        <label for="filtroSuperficieDesde">Superficie:<span class="required">*</span></label>
         <input type="number" id="filtroSuperficieDesde" min="0" class="small-input">
         -
         <input type="number" id="filtroSuperficieHasta" min="0" class="small-input">
-        <label for="filtroEstado">Estado:</label>
+        <label for="filtroEstado">Estado:<span class="required">*</span></label>
         <input type="text" id="filtroEstado" class="large-input">
     </div>
 </div>
