filtro editado y gestiona con error

--- a/TRABAJO/gestionaPropiedad.html
+++ b/TRABAJO/gestionaPropiedad.html
@@ -60,6 +60,64 @@
 
     </nav>
 
+<!-----------------------------------------------DATOS------------------------------------------------------->
+
+
+<section class="gestion-padding">
+    <div class="container mt-5 mb-5">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="section-header text-center text-white pb-5">
+                    <h2>Gestion</h2>
+                </div>
+            </div>
+        </div>
+        <div class="row m-0">
+            <div class="col-md-12 p-0 pt-4 pb-4">
+                <form action="#" class="bg-dark p-4 m-auto">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="mb-3">
+                                <input type="text" class="fore-control" placeholder="Nombre" required>
+                            </div>
+                        </div>
+                        <div class="col-md-12">
+                            <div class="mb-3">
+                                <input type="tel" class="fore-control" placeholder="Teléfono" required>
+                            </div>
+                        </div>
+                        <div class="col-md-12">
+                            <div class="mb-3">
+                                <input type="email" class="fore-control" placeholder="Correo electrónico" required>
+                            </div>
+                        </div>
+                        <div class="col-md-12">
+                            <div class="mb-3">
+                                <input type="text" class="fore-control" placeholder="Referencia" required>
+                            </div>
+                        </div>
+                        <div class="col-md-12">
+                            <div class="mb-3">
+                                <textarea class="form-control" placeholder="Mensaje" rows="3" required></textarea>
+                            </div>
+                        </div>
+                        <button class="btn btn-primary btn-lg btn-block mt-3" type="submit" onclick="enviargest()">Enviar</button>
+                        <script src="gestiona_propiedad.js"></script>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+
+
+<!---------------------------------------------------------FOOTER----------------------------------------------->
+
+
+
     <footer class="pie-pagina pie-pagina-dark bg-dark mt-5">
         <div class="grupo-1">
             <div class="box">
