--- a/TRABAJO/gestionaPropiedad.html
+++ b/TRABAJO/gestionaPropiedad.html
@@ -63,12 +63,14 @@
 <!-----------------------------------------------DATOS------------------------------------------------------->
 
 
-<section class="gestion-padding">
+<section class="contact section-padding">
     <div class="container mt-5 mb-5">
         <div class="row">
             <div class="col-md-12">
                 <div class="section-header text-center text-white pb-5">
-                    <h2>Gestion</h2>
+
+                    <h2>Gestiona</h2>
+                    
                 </div>
             </div>
         </div>
@@ -83,29 +85,27 @@
                         </div>
                         <div class="col-md-12">
                             <div class="mb-3">
-                                <input type="tel" class="fore-control" placeholder="Teléfono" required>
+                                <input type="tel" class="fore-control" placeholder="Telefono" required>
                             </div>
                         </div>
                         <div class="col-md-12">
                             <div class="mb-3">
-                                <input type="email" class="fore-control" placeholder="Correo electrónico" required>
+                                <input type="email" class="fore-control" placeholder="Correo" required>
                             </div>
-                        </div>
                         </div>
                         <div class="col-md-12">
                             <div class="mb-3">
                                 <textarea class="form-control" placeholder="Mensaje" rows="3" required></textarea>
                             </div>
                         </div>
-                        <button class="btn btn-primary btn-lg btn-block mt-3" type="submit" onclick="enviargest()">Enviar</button>
-                        <script src="gestiona_propiedad.js"></script>
+                        <!--mt : margen del top -->
+                        <button class="btn btn-primary btn-lg btn-blovk mt-3" type="submit">Enviar</button>
                     </div>
                 </form>
             </div>
         </div>
     </div>
 </section>
-
 
 
 
@@ -152,7 +152,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <script src="js/script.js"></script>
+    <script src="js/gestiona_propiedad.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
 
 
