--- a/TRABAJO/sobreNosotros.html
+++ b/TRABAJO/sobreNosotros.html
@@ -52,7 +52,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="gestionaPropiedad.html" class="nav-link">Gestiona tu propiedad</a>
+                        <a href="gestionaPropiedad.html" class="nav-link">Vende tu propiedad</a>
                     </li>
                 </ul>
             </div>
