--- a/TRABAJO/calculadora.html
+++ b/TRABAJO/calculadora.html
@@ -51,7 +51,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="gestionaPropiedad.html" class="nav-link">Gestiona tu propiedad</a>
+                        <a href="gestionaPropiedad.html" class="nav-link">Vende tu propiedad</a>
                     </li>
                 </ul>
             </div>
@@ -63,17 +63,13 @@
         <div class="container">
             <div class="row">
                 <!--para que sea responsive en modo telefono-->
-                <div class="col-lg-4 col-md-12 col-12">
-                    <div class="about-img">
-                        <img src="img/favicon.jpg" class="img-fluid" alt="">
-                    </div>
-                </div>
+                
                 <div class="col-lg-8 col-md-12 col-12 ps-lg-5 mt-md-5">
                     <div class="about-text text-white">
                         <h2>Calculadora de hipoteca</h2>
                         <p>Con nuestra calculadora de hipoteca podrás realizar una estimación del coste mensual de comprar
-                            una casa con hipoteca. Te permitirá saber si te es rentable y accesible para comenzar con el proceso
-                            de solicitud de hipoteca de tu próxima vivienda.
+                            un inmueble con hipoteca. Te permitirá saber si te es rentable y accesible para comenzar con el proceso
+                            de solicitud de hipoteca de tu próximo inmueble.
                         </p>
                         <a href="#" class="btn btn-primary">Mas Informacion</a>
                     </div>
@@ -99,41 +95,52 @@
                 <div class="col-12 col-md-12 col-lg-4">
                     <div class="card text-white text-center bg-dark pb-2">
                         <div class="card-body">
-                            <i class="bi bi-laptop"></i>
+                            <i class="bi bi-house-door-fill"></i>
                             <h3 class="card-title">Valor hipotecario</h3>
                             <p class="lead"> Es el precio estimado por una empresa acreditada mediante una tasación. Este precio se fija y será la cantidad
-                                máxima que el banco prestará para la operación, además de el valor que se toma como referencia para calcular el préstamo. Este precio 
+                                máxima que el banco prestará para la operación Este precio 
                                 puede ser mayor o menor que el valor de venta, ya que el valor hipotecario ha de ser un valor objetivo y sin especulaciones.
                             </p>
-                            <button class="btn bg-primary text-white">Mas Informacion</button>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-12 col-lg-4">
                     <div class="card text-white text-center bg-dark pb-2">
                         <div class="card-body">
-                            <i class="bi bi-wifi"></i>
-                            <h3 class="card-title">Internet</h3>
-                            <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi minus nisi
-                                quod
-                                repudiandae animi obcaecati nemo est neque eaque, architecto consequuntur
-                                recusandae, pariatur necessitatibus accusamus quibusdam. Placeat eum accusamus
-                                maxime.</p>
-                            <button class="btn bg-primary text-white">Mas Informacion</button>
+                            <i class="bi bi-cash-coin"></i>
+                            <h3 class="card-title">Ahorro aportado</h3>
+                            <p class="lead">Es la cantidad de dinero que tú como comprador de la vivienda deberás de aportar antes de que se te conceda un préstamo 
+                                bancario para la hipoteca. Esta cantidad esta fijada como el <b>20%</b> del valor hipotecario del inmueble. </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-12 col-lg-4">
                     <div class="card text-white text-center bg-dark pb-2">
                         <div class="card-body">
-                            <i class="bi bi-tv"></i>
-                            <h3 class="card-title">TV</h3>
-                            <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi minus nisi
-                                quod
-                                repudiandae animi obcaecati nemo est neque eaque, architecto consequuntur
-                                recusandae, pariatur necessitatibus accusamus quibusdam. Placeat eum accusamus
-                                maxime.</p>
-                            <button class="btn bg-primary text-white">Mas Informacion</button>
+                            <i class="bi bi-calendar2-check-fill"></i>
+                            <h3 class="card-title">Plazo en años</h3>
+                            <p class="lead">Es el número de años fijado para pagar el coste total de la hipoteca, de donde se calcularán el número de cuotas
+                                mensuales que se deberán pagar en total y el precio en cada una de estas cuotas.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-12 col-lg-4" id="tipofv">
+                    <div class="card text-white text-center bg-dark pb-2">
+                        <div class="card-body">
+                            <i class="bi bi-graph-up-arrow"></i>
+                            <h3 class="card-title">Tipo de interés</h3>
+                            <p class="lead"> El interés es la cantidad a pagar adicionalmente como remuneración de la concesión de un préstamo. Este interés puede ser:
+                                <ul class="lead">
+                                    <li>
+                                        fijo: el interés se mantiene igual durante el plazo de la hipoteca.
+                                    </li>
+                                    <li>
+                                        variable: el interés varía dependiendo de la suma de un índice (suele ser el Euríbor) y un porcentaje constante marcado 
+                                        por el banco.
+                                    </li>
+                                </ul>
+                            </p>
                         </div>
                     </div>
                 </div>
