--- a/TRABAJO/gestionaPropiedad.html
+++ b/TRABAJO/gestionaPropiedad.html
@@ -51,7 +51,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="#" class="nav-link active" aria-current="page">Gestiona tu propiedad</a>
+                        <a href="#" class="nav-link active" aria-current="page">Vende tu propiedad</a>
                     </li>
                 </ul>
             </div>
