Margen superior y "Más información" eliminados

--- a/TRABAJO/calculadora.html
+++ b/TRABAJO/calculadora.html
@@ -62,21 +62,19 @@
     <section class="about section-padding">
         <div class="container">
             <div class="row">
-                <!--para que sea responsive en modo telefono-->
-                
-                <div class="col-lg-8 col-md-12 col-12 ps-lg-5 mt-md-5">
-                    <div class="about-text text-white">
+                <div class="col-lg-8 col-md-12 col-12 ps-lg-5 mt-md-5 mb-5"> <!-- Agregado mb-5 para espacio inferior -->
+                    <div class="about-text text-white mt-5"> <!-- Agregada mt-5 para margen superior -->
                         <h2>Calculadora de hipoteca</h2>
                         <p>Con nuestra calculadora de hipoteca podrás realizar una estimación del coste mensual de comprar
                             un inmueble con hipoteca. Te permitirá saber si te es rentable y accesible para comenzar con el proceso
                             de solicitud de hipoteca de tu próximo inmueble.
                         </p>
-                        <a href="#" class="btn btn-primary">Mas Informacion</a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+    
 
     <section class="services section-padding">
         <div class="container">
@@ -110,7 +108,7 @@
                             <i class="bi bi-cash-coin"></i>
                             <h3 class="card-title">Ahorro aportado</h3>
                             <p class="lead">Es la cantidad de dinero que tú como comprador de la vivienda deberás de aportar antes de que se te conceda un préstamo 
-                                bancario para la hipoteca. Esta cantidad esta fijada como el <b>20%</b> del valor hipotecario del inmueble. </p>
+                                bancario para la hipoteca. Está fijado que, como mínimo, deberás aportar el <b>20%</b> del valor hipotecario del inmueble. </p>
                         </div>
                     </div>
                 </div>
