edición con usabilidad

--- a/TRABAJO/gestionaPropiedad.html
+++ b/TRABAJO/gestionaPropiedad.html
@@ -80,22 +80,22 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="mb-3">
-                                <input type="text" class="fore-control" placeholder="Nombre" required>
+                                <input type="text" class="fore-control" placeholder="Nombre (obligatorio)" required>
                             </div>
                         </div>
                         <div class="col-md-12">
                             <div class="mb-3">
-                                <input type="tel" class="fore-control" placeholder="Telefono" required>
+                                <input type="tel" class="fore-control" placeholder="Telefono (obligatorio)" required>
                             </div>
                         </div>
                         <div class="col-md-12">
                             <div class="mb-3">
-                                <input type="email" class="fore-control" placeholder="Correo" required>
+                                <input type="email" class="fore-control" placeholder="Correo (obligatorio)" required>
                             </div>
                         </div>
                         <div class="col-md-12">
                             <div class="mb-3">
-                                <textarea class="form-control" placeholder="Mensaje" rows="3" required></textarea>
+                                <textarea class="form-control" placeholder="Mensaje (obligatorio)" rows="3" required></textarea>
                             </div>
                         </div>
                         <!--mt : margen del top -->
