Piso mid Update

--- a/TRABAJO/index.html
+++ b/TRABAJO/index.html
@@ -127,7 +127,7 @@
         <!-- Fila 2 -->
         <label for="filtroTipo">Tipo:</label>
         <input type="text" id="filtroTipo" class="large-input">
-        <label for="filtroHabitaciones"></label>
+        <label for="filtroHabitaciones">Nº Habitaciones</label>
         <input type="number" id="filtroHabitaciones" min="0" class="small-input">
         <label for="filtroBanos">Nº Baños:</label>
         <input type="number" id="filtroBanos" min="0" class="small-input">
@@ -149,6 +149,7 @@
 </div>
 <button onclick="aplicarFiltros()">Aplicar Filtros</button>
 <script src="Piso.js"></script>
+
 
 
 
