--- a/TRABAJO/detalle_piso.html
+++ b/TRABAJO/detalle_piso.html
@@ -1,17 +1,225 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detalle del Piso</title>
-    <!-- Agrega aquí tus enlaces a archivos CSS y cualquier otro recurso necesario -->
+
+    <title>Málaga Dream Home</title>
+
+    <!--Icono pestaña del navegador-->
+    <link rel="icon" type="favicon2/png" href="./img/favicon2.png">
+
+    <!-- All CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <!--iconos bootstrap-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
+    <!--select del bootstrap-->
+
 </head>
+
 <body>
-    <h1>Detalles del Piso</h1>
-    <div id="detallePisoContainer">
-        <!-- Aquí se mostrarán los detalles del piso -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="container">
+            <a href="#" class="navbar-brand"> <span class="text-primary">Málaga</span>DreamHome</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarS"
+                aria-controls="navbarS" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarS">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a href="index.html" class="nav-link " aria-current="page">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="calculadora.html" class="nav-link">Calculadora</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="sobreNosotros.html" class="nav-link">Sobre Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="gestionaPropiedad.html" class="nav-link">Gestiona tu propiedad</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="container">
+        <h1>Detalles del Piso</h1>
+        <div id="detallePisoContainer">
+            <!-- Aquí se llenará la información del piso -->
+        </div>
     </div>
 
-    <script src="detalle_piso.js"></script>
+    <!-- Modal -->
+    <div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-xl">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="imageModalLabel"></h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div id="modalCarousel" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner" id="modalCarouselInner">
+                            <!-- Aquí se insertarán las imágenes del carrusel -->
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#modalCarousel" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#modalCarousel" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Carrusel JavaScript -->
+    <div id="carouselContainer"></div>
+    <script>
+        // Función para obtener parámetros de la URL
+        function obtenerParametroURL(nombre) {
+            const urlParams = new URLSearchParams(window.location.search);
+            return urlParams.get(nombre);
+        }
+
+        // Obtener el ID del piso de la URL
+        const pisoId = obtenerParametroURL('pisoId');
+
+        // Obtener el objeto piso correspondiente al ID del localStorage
+        const pisoSeleccionado = JSON.parse(localStorage.getItem('pisos')).find(piso => piso.id === parseInt(pisoId));
+
+        // Rellenar la información del piso en el HTML
+        const detallePisoContainer = document.getElementById("detallePisoContainer");
+        detallePisoContainer.innerHTML = `
+            <div>
+                <h2>${pisoSeleccionado.nombre}</h2>
+                <p>Operación: ${pisoSeleccionado.operacion}</p>
+                <p>Municipio: ${pisoSeleccionado.municipio}</p>
+                <!-- Agrega más detalles aquí según sea necesario -->
+            </div>
+        `;
+    </script>
+
+    <script>
+        // JavaScript del carrusel
+        document.addEventListener("DOMContentLoaded", function () {
+            // Elemento contenedor del carrusel
+            var carouselContainer = document.getElementById("carouselContainer");
+
+            // Crear el elemento de carrusel
+            var carousel = document.createElement("div");
+            carousel.classList.add("carousel", "slide");
+            carousel.setAttribute("id", "carouselE");
+            carousel.setAttribute("data-bs-ride", "carousel");
+
+            // Crear indicadores
+            var indicators = document.createElement("div");
+            indicators.classList.add("carousel-indicators");
+            indicators.innerHTML = `
+                <button type="button" data-bs-target="#carouselE" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselE" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselE" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselE" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                <button type="button" data-bs-target="#carouselE" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                <button type="button" data-bs-target="#carouselE" data-bs-slide-to="5" aria-label="Slide 6"></button>
+            `;
+
+            // Crear items del carrusel
+            var carouselInner = document.createElement("div");
+            carouselInner.classList.add("carousel-inner");
+
+            var src = "img/Casas/Piso" + pisoId + "/";
+            var images = [
+                src + "1.jpg", src + "2.jpg", src + "3.jpg", src + "4.jpg", src + "5.jpg", src + "6.jpg"
+            ];
+
+            images.forEach(function (imageSrc, index) {
+                var item = document.createElement("div");
+                item.classList.add("carousel-item");
+                if (index === 0) {
+                    item.classList.add("active");
+                }
+                item.innerHTML = `
+                    <img src="${imageSrc}" class="d-block w-100 carousel-image" alt="Slide ${index + 1}">
+                    <div class="carousel-caption">
+                    </div>
+                `;
+                carouselInner.appendChild(item);
+            });
+
+            // Botones de control
+            var prevButton = document.createElement("button");
+            prevButton.classList.add("carousel-control-prev");
+            prevButton.setAttribute("type", "button");
+            prevButton.setAttribute("data-bs-target", "#carouselE");
+            prevButton.setAttribute("data-bs-slide", "prev");
+            prevButton.innerHTML = `
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            `;
+
+            var nextButton = document.createElement("button");
+            nextButton.classList.add("carousel-control-next");
+            nextButton.setAttribute("type", "button");
+            nextButton.setAttribute("data-bs-target", "#carouselE");
+            nextButton.setAttribute("data-bs-slide", "next");
+            nextButton.innerHTML = `
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            `;
+
+            // Agregar elementos al carrusel
+            carousel.appendChild(indicators);
+            carousel.appendChild(carouselInner);
+            carousel.appendChild(prevButton);
+            carousel.appendChild(nextButton);
+
+            // Agregar carrusel al contenedor
+            carouselContainer.appendChild(carousel);
+
+            // Inicializar el carrusel
+            var myCarousel = new bootstrap.Carousel(document.getElementById('carouselE'), {
+                interval: 2000 // Intervalo entre transiciones (en milisegundos)
+            });
+
+            // Añadir evento de clic a las imágenes del carrusel
+            document.querySelectorAll('.carousel-image').forEach(function (image, index) {
+                image.addEventListener('click', function () {
+                    var modalCarouselInner = document.getElementById("modalCarouselInner");
+                    modalCarouselInner.innerHTML = ''; // Limpiar el contenido del carrusel del modal
+
+                    images.forEach(function (imgSrc, idx) {
+                        var modalItem = document.createElement("div");
+                        modalItem.classList.add("carousel-item");
+                        if (idx === index) {
+                            modalItem.classList.add("active");
+                        }
+                        modalItem.innerHTML = `
+                            <img src="${imgSrc}" class="d-block w-100" alt="Slide ${idx + 1}">
+                        `;
+                        modalCarouselInner.appendChild(modalItem);
+                    });
+
+                    var imageModal = new bootstrap.Modal(document.getElementById('imageModal'));
+                    imageModal.show();
+                });
+            });
+        });
+    </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
 </body>
+
 </html>
