Retoque final por miguel

--- a/TRABAJO/gestionaPropiedad.html
+++ b/TRABAJO/gestionaPropiedad.html
@@ -71,6 +71,8 @@
 
                     <h2>Gestiona</h2>
                     
+                    <p>Aquí podrá usted contactar de forma directa si desea vender o alquilar su propiedad</p>
+
                 </div>
             </div>
         </div>
@@ -106,9 +108,6 @@
         </div>
     </div>
 </section>
-
-
-
 
 <!---------------------------------------------------------FOOTER----------------------------------------------->
 
