--- a/TRABAJO/gestionaPropiedad.html
+++ b/TRABAJO/gestionaPropiedad.html
@@ -43,7 +43,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="calculadora.html" class="nav-link">Calculadora</a>
+                        <a href="calculadora.html" class="nav-link">Calcula tu hipoteca</a>
                     </li>
 
                    <li class="nav-item">
@@ -51,7 +51,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="#" class="nav-link active" aria-current="page">Vende tu propiedad</a>
+                        <a href="#" class="nav-link active" aria-current="page">Gestiona tu propiedad</a>
                     </li>
                 </ul>
             </div>
