--- a/TRABAJO/sobreNosotros.html
+++ b/TRABAJO/sobreNosotros.html
@@ -40,11 +40,11 @@
             <div class="collapse navbar-collapse" id="navbarS">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a href="index.html" class="nav-link"> Inicio</a>
+                        <a href="index.html" class="nav-link">Inicio</a>
                     </li>
 
                     <li class="nav-item">
-                        <a href="calculadora.html" class="nav-link">Calculadora</a>
+                        <a href="calculadora.html" class="nav-link">Calcula tu hipoteca</a>
                     </li>
 
                     <li class="nav-item">
@@ -52,7 +52,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="gestionaPropiedad.html" class="nav-link">Vende tu propiedad</a>
+                        <a href="gestionaPropiedad.html" class="nav-link">Gestiona tu propiedad</a>
                     </li>
                 </ul>
             </div>
