--- a/TRABAJO/index.html
+++ b/TRABAJO/index.html
@@ -43,7 +43,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="calculadora.html" class="nav-link">Calculadora</a>
+                        <a href="calculadora.html" class="nav-link">Calcula tu hipoteca</a>
                     </li>
 
                    <li class="nav-item">
@@ -51,7 +51,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="gestionaPropiedad.html" class="nav-link">Vende tu propiedad</a>
+                        <a href="gestionaPropiedad.html" class="nav-link">Gestiona tu propiedad</a>
                     </li>
                 </ul>
             </div>
