Squashed commit of the following:
commit f56c7966fc8d8b2baaafe2c29b542a29c636dbd3
Merge: 7485ecf 4ae1aad
Author: Juanmapm23 <125076930+Juanmapm23@users.noreply.github.com>
Date:   Tue May 14 21:06:06 2024 +0200

    Merge branch 'filtro' into developer

commit 7485ecf0c7516c24b5362f2de86fe15dde95604c
Author: AndresSantaella <andressantaella@uma.es>
Date:   Tue May 14 20:50:55 2024 +0200

    Calculadora implementada

commit 4ae1aad405429aa3f53c132e03a0480302aac7e8
Author: Juanmapm23 <125076930+Juanmapm23@users.noreply.github.com>
Date:   Tue May 14 19:07:44 2024 +0200

    detalle piso final

commit b9cfd3870b5d7d543799b18f18f09f71fb1d2055
Author: mlr03 <miguellabellaramirez@uma.es>
Date:   Tue May 14 18:20:27 2024 +0200

    Retoque final por miguel

commit 19171ff9be1078196a78a95c41f3f3a05e04d053
Author: Juanmapm23 <125076930+Juanmapm23@users.noreply.github.com>
Date:   Tue May 14 17:14:21 2024 +0200

    Piso mid Update

commit c5eabbe40b6a3a0cfb95d2e2fc557ccd0ff9fe6d
Author: mlr03 <miguellabellaramirez@uma.es>
Date:   Tue May 14 14:27:03 2024 +0200

    edición con usabilidad

commit 3a2ae8e375dbb8d953238c7675cba2b268a560cf
Author: AndresSantaella <andressantaella@uma.es>
Date:   Mon May 13 20:31:32 2024 +0200

    Margen superior y "Más información" eliminados

commit 077041b8aee4900d5201d28600148eb185f1422f
Author: AndresSantaella <andressantaella@uma.es>
Date:   Mon May 13 20:11:16 2024 +0200

    Cambios menores

    Texto de calculadora y "Gestiona tu propiedad" por "Vende tu propiedad"

commit b9d0cd27dad3eefce586ccdefa7e6d660ecb271c
Author: mlr03 <miguellabellaramirez@uma.es>
Date:   Sat May 11 16:56:11 2024 +0200

    gestiona

    gestiona ok

commit 4e650e773411ca5c59a12c45df63cd8bed47a41d
Author: mlr03 <miguellabellaramirez@uma.es>
Date:   Fri May 10 19:00:59 2024 +0200

    r

commit cf2c010ee67e4e08649d26512d35af51f2f09e0b
Author: mlr03 <miguellabellaramirez@uma.es>
Date:   Fri May 10 18:51:43 2024 +0200

    retoque

commit 4645526fec1d1df6c8852dc6

--- a/TRABAJO/sobreNosotros.html
+++ b/TRABAJO/sobreNosotros.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="es">
 
 <head>
@@ -13,11 +13,11 @@
 
     <!-- All CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <!--iconos bootstrap-->
     <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
+          href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
     <!--select del bootstrap-->
 
     <link rel="stylesheet" href="css/sobreNosotros.css">
@@ -33,18 +33,18 @@
             <a href="index.html" class="navbar-brand"> <span class="text-primary">Málaga</span>DreamHome</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarS"
-                aria-controls="navbarS" aria-expanded="false" aria-label="Toggle navigation">
+                    aria-controls="navbarS" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarS">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a href="index.html" class="nav-link"> Inicio</a>
+                        <a href="index.html" class="nav-link">Inicio</a>
                     </li>
 
                     <li class="nav-item">
-                        <a href="calculadora.html" class="nav-link">Calculadora</a>
+                        <a href="calculadora.html" class="nav-link">Calcula tu hipoteca</a>
                     </li>
 
                     <li class="nav-item">
@@ -68,54 +68,149 @@
     <section class="questions container">
         <h2 class="subtitle">Preguntas frecuentes</h2>
         <p class="questions_paragraph">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio nulla sunt quis illum enim tenetur
-            dignissimos qui nihil voluptate,
+            A continuación se ofrece un listado de preguntas comunes que suelen hacer nuestros usuarios acerca de las
+            diferentes posibilidades que ofrecidos, para daros un servicio eficiente y sencillo.
         </p>
         <section class="questions__container">
             <article class="questions__padding">
                 <div class="questions__answer">
-                    <h3 class="questions__title">¿Cómo contacto?
+                    <h3 class="questions__title">
+                        ¿Cómo contacto?
                         <span class="questions__arrow">
                             <i class="questions__i bi bi-arrow-up-short"></i>
                         </span>
                     </h3>
-                    <p class="questions__show" id="paparrucha">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi vel vero
+                    <p class="questions__show" id="paparrucha">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Sequi vel vero
                         consequatur, praesentium natus perferendis tenetur ratione doloribus assumenda, inventore harum
-                        tempore maxime? Quaerat cupiditate maxime nulla reiciendis perferendis et!</p>
+                        tempore maxime? Quaerat cupiditate maxime nulla reiciendis perferendis et!
+                    </p>
                 </div>
             </article>
 
             <article class="questions__padding" id="kk">
                 <div class="questions__answer">
-                    <h3 class="questions__title">¿Cómo calculo mi hipoteca?
+                    <h3 class="questions__title">
+                        ¿Cómo calculo mi hipoteca?
                         <span class="questions__arrow">
                             <i class="questions__i bi bi-arrow-up-short"></i>
                         </span>
                     </h3>
-                    <p class="questions__show">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi vel vero
+                    <p class="questions__show">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi vel vero
                         consequatur, praesentium natus perferendis tenetur ratione doloribus assumenda, inventore harum
-                        tempore maxime? Quaerat cupiditate maxime nulla reiciendis perferendis et!</p>
+                        tempore maxime? Quaerat cupiditate maxime nulla reiciendis perferendis et!
+                    </p>
                 </div>
             </article>
 
             <article class="questions__padding">
                 <div class="questions__answer">
-                    <h3 class="questions__title">¿Cómo busco casas?
+                    <h3 class="questions__title">
+                        ¿Cómo busco casas?
                         <span class="questions__arrow">
                             <i class="questions__i bi bi-arrow-up-short"></i>
                         </span>
                     </h3>
-                    <p class="questions__show">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi vel vero
+                    <p class="questions__show">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi vel vero
                         consequatur, praesentium natus perferendis tenetur ratione doloribus assumenda, inventore harum
-                        tempore maxime? Quaerat cupiditate maxime nulla reiciendis perferendis et!</p>
+                        tempore maxime? Quaerat cupiditate maxime nulla reiciendis perferendis et!
+                    </p>
                 </div>
             </article>
         </section>
     </section>
 
 
- 
-   
+
+
+    <!---------------------------------------------------------------------------------->
+    <!-----------------------------------CONTACTO----------------------------------------------->
+
+    <section class="contact section-padding">
+        <div class="container mt-5 mb-5">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="section-header text-center text-white pb-5">
+                        <h2>Contacto</h2>
+                        <p>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum natus possimus quos
+                            quibusdam illum deleniti voluptas atque quia molestias <br>cumque minima eos ullam, aliquid
+                            fugit ducimus voluptates, rerum, in nemo?
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row m-0">
+                <div class="col-md-12 p-0 pt-4 pb-4">
+                    <form action="#" class="bg-dark p-4 m-auto">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="mb-3">
+                                    <input type="text" class="fore-control" placeholder="Nombre" required>
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <div class="mb-3">
+                                    <input type="tel" class="fore-control" placeholder="Telefono" required>
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <div class="mb-3">
+                                    <textarea class="form-control" placeholder="Mensaje" rows="3" required></textarea>
+                                </div>
+                            </div>
+                            <!--mt : margen del top -->
+                            <button class="btn btn-primary btn-lg btn-blovk mt-3" type="submit">Enviar</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!---------------------------------------------------------------------------------->
+    <!---------------------------------------INTEGRANTES DEL GRUPO------------------------------------------->
+
+    <section class="team section-padding">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="section-header text-center text-white pb-5">
+                        <h2>Integrantes del grupo</h2>
+                        <p>
+                            orem ipsum, dolor sit amet consectetur adipisicing elit. <br> Omnis in maiores
+                            modi eum harum velit off
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="card text-center bg-dark">
+                        <div class="card-body text-white">
+                            <img src="img/persona.jpg" class="img-fluid rounded-circle" alt="">
+                            <h3 class="card-title py-2">Lorem</h3>
+                            <p class="card-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
+                                nullasaepe!
+                            </p>
+                            <p class="socials">
+                                <i class="bi bi-twitter text-white mx-1"></i>
+                                <i class="bi bi-facebook text-white mx-1"></i>
+                                <i class="bi bi-linkedin text-white mx-1"></i>
+                                <i class="bi bi-instagram text-white mx-1"></i>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!---------------------------------------------------------------------------------->
     <!-----------------------------------FOOTER----------------------------------------------->
 
@@ -129,9 +224,10 @@
                 </figure>
             </div>
             <div class="box">
-                <p class="mt-4 mb-5"><i class="bi bi-geo-fill"></i>Calle Blvr. Louis Pasteur,35 <br> <i
-                        class="bi bi-phone-fill"></i> 952 13 28 42 <br><i class="bi bi-envelope-fill"></i>
-                    malagadreamhome@gmail.es</p>
+                <p class="mt-4 mb-5">
+                    <i class="bi bi-geo-fill"></i>Calle Blvr. Louis Pasteur,35 <br> <i class="bi bi-phone-fill"></i> 952 13 28 42 <br><i class="bi bi-envelope-fill"></i>
+                    malagadreamhome@gmail.es
+                </p>
             </div>
 
             <div class="box">
@@ -154,8 +250,8 @@
 
     <!-- All Js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
     <!--quitar-->
