--- a/TRABAJO/index.html
+++ b/TRABAJO/index.html
@@ -134,14 +134,16 @@
         <!-- Fila 3 -->
         <label for="filtroPrecioDesde">Precio:</label>
         <input type="number" id="filtroPrecioDesde" min="0" class="small-input">
-        -
+        <label for="filtroPreciohasta">-</label>
+
         <input type="number" id="filtroPrecioHasta" min="0" class="small-input">
         <label for="filtroDistrito">Distrito:</label>
         <input type="text" id="filtroDistrito" class="large-input">
         <!-- Fila 4 -->
         <label for="filtroSuperficieDesde">Superficie:</label>
         <input type="number" id="filtroSuperficieDesde" min="0" class="small-input">
-        -
+        <label for="filtroSupHasta">-</label>
+
         <input type="number" id="filtroSuperficieHasta" min="0" class="small-input">
         <label for="filtroEstado">Estado:</label>
         <input type="text" id="filtroEstado" class="large-input">
