--- a/TRABAJO/detalle_piso.html
+++ b/TRABAJO/detalle_piso.html
@@ -155,6 +155,7 @@
     var formularioHTML = `
         <div class="row m-0">
             <div class="col-md-12 p-0 pt-4 pb-4">
+                <h3>¿Quieres más información sobre este inmueble?</h3>
                 <form class="bg-dark p-4 m-auto" id="miFormulario">
                     <div class="row">
                         <div class="col-md-12">
