--- a/TRABAJO/index.html
+++ b/TRABAJO/index.html
@@ -126,7 +126,12 @@
         <input type="text" id="filtroMunicipio" class="large-input">
         <!-- Fila 2 -->
         <label for="filtroTipo">Tipo:</label>
-        <input type="text" id="filtroTipo" class="large-input">
+        <select id="filtroTipo">Tipo:</label>
+            <option value="cualquiera">Cualquiera</option>
+            <option value="Piso">Piso</option>
+            <option value="Apartamento">Apartamento</option>
+            <option value="Casa">Casa</option>
+            </select>
         <label for="filtroHabitaciones">Nº Habitaciones</label>
         <input type="number" id="filtroHabitaciones" min="0" class="small-input">
         <label for="filtroBanos">Nº Baños:</label>
@@ -143,6 +148,7 @@
         <label for="filtroSuperficieDesde">Superficie:</label>
         <input type="number" id="filtroSuperficieDesde" min="0" class="small-input">
         <label for="filtroSupHasta">-</label>
+
         <input type="number" id="filtroSuperficieHasta" min="0" class="small-input">
         <label for="filtroEstado">Estado:</label>
         <input type="text" id="filtroEstado" class="large-input">
